--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "js-yaml": "^3.12.2",
     "nodegit": "^0.24.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^6.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
