--- a/test/resources/test-asset-loader/resources/test-course/test-language/infile-assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/test-course/test-language/infile-assets-index.yaml
@@ -1,8 +1,8 @@
 asset_index:
   mode: "infile" # <"infile" | "ondisk">, mandatory
   assets: # an array of key value pairs, mandatory
-    - text: "test-course->test-language->infile-assets"
-    - not_in_used: "this is not used..."
+    text: "test-course->test-language->infile-assets"
+    not_in_used: "this is not used..."
   fallbacks: # optional
     default: # optional
       target_path: "/fallback-target/test-language/" # mandatory when .fallbacks.default exists; the new base path of the remapped keys
@@ -10,6 +10,6 @@ asset_index:
         - "default_fallback1"
         - "default_fallback2"
     redirects: # optional. an array of key value paris. each value is the new base path of the remapped key
-      - redirect_fallback: "/fallback-target/test-language/"
-      - redirect_cyclic: "/fallback-target/test-language/"
-      - redirect_double_fallback: "/fallback-target/test-language/"
+      redirect_fallback: "/fallback-target/test-language/"
+      redirect_cyclic: "/fallback-target/test-language/"
+      redirect_double_fallback: "/fallback-target/test-language/"
