--- a/test/resources/test-asset-loader/resources/fallback-target/fallback-language/ondisk-assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/fallback-target/fallback-language/ondisk-assets-index.yaml
@@ -4,6 +4,6 @@ asset_index:
     - default_double_fallback: "default_double_fallback.txt"
   fallbacks:
     default:
-      target_path: "/test-course/test-language/"
+      path_replacement: ["test-course", "test-language"]
       keys:
         - "default_cyclic"
