Fix test resources

--- a/test/resources/test-asset-loader/resources/fallback-target/fallback-language/ondisk-assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/fallback-target/fallback-language/ondisk-assets-index.yaml
@@ -1,7 +1,7 @@
 asset_index:
   mode: "ondisk"
   assets:
-    - default_double_fallback: "default_double_fallback.txt"
+    default_double_fallback: "default_double_fallback.txt"
   fallbacks:
     default:
       path_replacement: ["test-course", "test-language"]
