--- a/test/resources/test-asset-loader/resources/test-course/test-language/ondisk-assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/test-course/test-language/ondisk-assets-index.yaml
@@ -10,5 +10,6 @@ asset_index:
         - "default_fallback"
         - "default_cyclic"
         - "default_double_fallback"
+        - "default_not_found"
     redirects:
       redirect_fallback: ["fallback-target", "test-language"]
