Test for handling fallback container not found

--- a/test/resources/test-asset-loader/resources/test-course/test-language/infile-assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/test-course/test-language/infile-assets-index.yaml
@@ -14,3 +14,4 @@ asset_index:
       redirect_cyclic: ["fallback-target", "test-language"]
       redirect_double_fallback: ["fallback-target", "test-language"]
       redirect_not_found: [ fallback-target, test-language ]
+      redirect_container_not_found: [ not_exist, not_exist ]
