--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An interactive git tutorial",
   "main": "main.js",
   "dependencies": {
+    "adm-zip": "^0.4.13",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.2",
     "nodegit": "^0.24.1"
