--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "adm-zip": "^0.4.13",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "simple-git": "^1.110.0"
   },
   "scripts": {
     "test": "mocha --recursive \"./test/tests/*.js\""
