--- a/test/resources/action-executor/resources/inject-file-index.yaml
+++ b/test/resources/action-executor/resources/inject-file-index.yaml
@@ -4,7 +4,7 @@ asset_index:
     simpleOneFile: "simple-one-file.txt"
     oneFileOverwritting: "one-file-overwritting.txt"
     oneFileInPath: "one-file-in-path.txt"
-    oneFileInPathOverwritting: "one-file-in-path-overwritting"
+    oneFileInPathOverwritting: "one-file-in-path-overwritting.txt"
     manyFiles1: "many-files-1.txt"
     manyFiles2: "many-files-2.txt"
     manyFilesOverwritting1: "many-files-overwritting-1.txt"
