--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "simple-git": "^1.110.0"
   },
   "scripts": {
-    "test": "mocha --recursive \"./test/tests/*.js\""
+    "test": "mocha --recursive \"./test/tests/*.js\"",
+    "test-core": "mocha --recursive \"./test/tests/*.js\" --grep \"#core\""
   },
   "author": "zedaizd",
   "license": "ISC"
