Enrich assets for testing repo compare

--- a/test/resources/vcs-compare/assets/file-index.yaml
+++ b/test/resources/vcs-compare/assets/file-index.yaml
@@ -1,5 +1,8 @@
 asset_index:
   mode: "ondisk"
   assets:
-    dirty: "dirty.txt"
-    resolveConflict: "resolveConflict.txt"
+    dirtyAdd: "dirtyAdd.txt"
+    dirtyModify: "dirtyModify.txt"
+    resolveConflictAA: "resolveConflictAA.txt"
+    resolveConflictMM: "resolveConflictMM.txt"
+    resolveConflictMR: "resolveConflictMR.txt"
