--- a/test/resources/vcs-compare/generate-base-repo.yaml
+++ b/test/resources/vcs-compare/generate-base-repo.yaml
@@ -205,7 +205,7 @@ stages:
       - !writeFile
         sourceAssetIds:
           - file/base/fifth_file:v2
-        targetPaths:
+        destinationPaths:
           - repo/folder/fifth
       - !stageAll
         repoSetupName: repo
@@ -222,7 +222,7 @@ stages:
       - !writeFile
         sourceAssetIds:
           - file/base/first_file:v3
-        targetPaths:
+        destinationPaths:
           - repo/first_file
       - !stageAll
         repoSetupName: repo
@@ -236,8 +236,10 @@ stages:
       - !cleanCheckout
         repoSetupName: repo
         commitish: "conflict-MR"
-      - !removeFile
-        targetPaths:
+      - !writeFile
+        sourceAssetIds:
+          - file/base/second_file:v2
+        destinationPaths:
           - repo/second_file
       - !stageAll
         repoSetupName: repo
@@ -247,6 +249,7 @@ stages:
         arguments:
           - "remove second"
   - name: conflict-mixed
+    contents:
       - !cleanCheckout
         repoSetupName: repo
         commitish: "conflict-mixed"  
