--- a/test/resources/vcs-compare/generate-testing-ref-repo.yaml
+++ b/test/resources/vcs-compare/generate-testing-ref-repo.yaml
@@ -55,7 +55,7 @@ stages:
     contents:
     - !merge
       repoSetupName: repo
-      withBranch: second_branch
+      withBranch: "second-branch"
   - name: conflictAA
     contents:
     - !merge
@@ -108,7 +108,7 @@ stages:
     contents:
     - !cleanCheckout
       repoSetupName: repo
-      commitish: "ea38d"
+      commitish: "fed7d7f"
       
 
         
