Amend testing repo generation config

--- a/test/resources/vcs-compare/generate-testing-ref-repo.yaml
+++ b/test/resources/vcs-compare/generate-testing-ref-repo.yaml
@@ -110,7 +110,7 @@ stages:
     contents:
     - !cleanCheckout
       repoSetupName: repo
-      commitish: "fed7d7f"
+      commitish: "end-of-base"
       
 
         
