--- a/test/resources/vcs-compare/generate-base-repo.yaml
+++ b/test/resources/vcs-compare/generate-base-repo.yaml
@@ -255,4 +255,12 @@ stages:
       - !cleanCheckout
         repoSetupName: repo
         commitish: master
+  - name: tagging
+    contents:
+      - !git
+        repoSetupName: repo
+        command: addTag
+        arguments:
+          - end-of-base
+
 
