--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "main.js",
   "dependencies": {
     "fs-extra": "^8.0.0",
-    "js-yaml": "^3.12.2",
+    "js-yaml": "^3.13.1",
     "nodegit": "^0.24.3"
   },
   "devDependencies": {
     "adm-zip": "^0.4.13",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
+    "seedrandom": "^3.0.1",
     "simple-git": "^1.110.0"
   },
   "scripts": {
