--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "adm-zip": "^0.4.13",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "electron": "^5.0.2",
     "mocha": "^6.1.4",
     "seedrandom": "^3.0.1",
     "simple-git": "^1.110.0"
