Install electron-packager

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "electron": "^5.0.2",
+    "electron-packager": "^13.1.1",
     "mocha": "^6.1.4",
     "seedrandom": "^3.0.1",
     "simple-git": "^1.110.0"
