Add a build command to include dev dependencies for testing

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rebuild": "electron-rebuild -f --version 4.2.2 -w nodegit",
     "etest": "electron-mocha --renderer --recursive \"./test/tests/*.js\"",
     "etest-core": "electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
-    "build-win64": "electron-packager . intergitive --platform=win32 --arch=x64"
+    "build-win64": "electron-packager . intergitive --platform=win32 --arch=x64",
+    "build-win64-dev": "electron-packager . intergitive --platform=win32 --arch=x64 --prune=false"
   },
   "author": "zedaizd",
   "license": "ISC"
