--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "simple-git": "^1.110.0"
   },
   "scripts": {
-    "test": "mocha --recursive \"./test/tests/*.js\"",
-    "test-core": "mocha --recursive \"./test/tests/*.js\" --grep \"#core\"",
-    "start": "electron .",
-    "rebuild": "electron-rebuild -f --version 4.2.2 -w nodegit",
-    "etest": "electron-mocha --renderer --recursive \"./test/tests/*.js\"",
-    "etest-core": "electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
-    "etest-core-debug": "electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
-    "build-win64": "electron-packager . intergitive --platform=win32 --arch=x64",
-    "build-win64-dev": "electron-packager . intergitive --platform=win32 --arch=x64 --prune=false"
+    "test": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\"",
+    "test-core": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\" --grep \"#core\"",
+    
+    "start": "npm run \"load-native-electron\" && electron .",
+    "rebuild": "npm run \"load-native-electron\" && electron-rebuild -f --version 4.2.2 -w nodegit",
+    "etest": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\"",
+    "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
+    "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
+    "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64",
+    "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
+
+    "load-native-node": "node \"./dev/module-switch.js\" load nodegit node-10-11",
+    "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron-4"
   },
   "author": "zedaizd",
   "license": "ISC"
