--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fs-extra": "^8.0.0",
     "js-yaml": "^3.13.1",
     "nodegit": "^0.24.3",
+    "override-require": "^1.1.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -22,17 +23,18 @@
     "simple-git": "^1.110.0"
   },
   "scripts": {
+    "==== Node ====":"",
     "test": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\"",
     "test-core": "npm run \"load-native-node\" && mocha --recursive \"./test/tests/*.js\" --grep \"#core\"",
-    
+    "==== Electron ====":"",
     "start": "npm run \"load-native-electron\" && electron .",
     "rebuild": "npm run \"load-native-electron\" && electron-rebuild -f --version 4.2.2 -w nodegit",
     "etest": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\"",
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
+    "==== Build =====":"",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
-
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node-10-11",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron-4"
   },
