--- a/example/resources/levels/test.yaml
+++ b/example/resources/levels/test.yaml
@@ -1,3 +1,3 @@
 steps:
-  - !elaborate: # elaborate this is an example
+  - !elaborate # elaborate this is an example
     descriptionId: "assets/description:elaborate:example"
