--- a/example/resources/levels/test.yaml
+++ b/example/resources/levels/test.yaml
@@ -1,3 +1,5 @@
 steps:
   - !elaborate # elaborate this is an example
     descriptionId: "assets/description:elaborate:example"
+  - !illustrate # illustrate that IllustrateStep puts out illustrations
+    descriptionId: "assets/description:illustrate:example"
