--- a/example/resources/levels/test.yaml
+++ b/example/resources/levels/test.yaml
@@ -5,3 +5,8 @@ steps:
     descriptionId: "assets/description:illustrate:example"
   - !instruct # instruct the user to take action
     descriptionId: "assets/description:instruct:example"
+  - !verifyInput
+    answer: "2"
+  - !verifyInput
+    descriptionId: "assets/description:verifyInput"
+    answer: "{{ assets/localized_answer }}"
