Display input and button in VerifyInput

--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -4,3 +4,5 @@ asset_index:
     elaborate: "解說"
     illustrate: "圖解"
     instruct: "操作指引"
+    verifyInputPlaceholder: "請輸入答案"
+    verifyInputSubmitText: "確認"
