Correct asset to globalize VerifyInput

--- a/example/resources/levels/test.yaml
+++ b/example/resources/levels/test.yaml
@@ -9,4 +9,4 @@ steps:
     answer: "2"
   - !verifyInput
     descriptionId: "assets/description:verifyInput"
-    answer: "{{ assets/localized_answer }}"
+    answer: "${{ assets/localized_answer }}"
