--- a/test/resources/vcs-compare/generate-base-repo.yaml
+++ b/test/resources/vcs-compare/generate-base-repo.yaml
@@ -3,17 +3,20 @@ stages:
     contents:
     - !git
       repoSetupName: repo
-      command: init
+      arguments:
+        - init
     - !git
       repoSetupName: repo
-      command: addConfig
       arguments:
+        - config 
+        - "--local"
         - user.name
         - test-repo
     - !git
       repoSetupName: repo
-      command: addConfig
       arguments:
+        - config 
+        - "--local"        
         - user.email
         - test-repo@some.mail.server
   - name: base1
@@ -27,8 +30,9 @@ stages:
       repoSetupName: repo
     - !git
       repoSetupName: repo
-      command: commit
       arguments:
+        - commit
+        - -m
         - commit
     - !writeFile
       sourceAssetIds:
@@ -39,14 +43,15 @@ stages:
       repoSetupName: repo
     - !git
       repoSetupName: repo
-      command: commit
       arguments:
+        - commit
+        - -m
         - commit
     - !git
       repoSetupName: repo
-      command: branch
       arguments:
-        - "second-branch": null
+        - branch
+        - second-branch
   - name: base2
     contents:
       - !writeFile
@@ -58,8 +63,9 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
+          - commit
+          - -m
           - commit
       - !writeFile
         sourceAssetIds:
@@ -70,31 +76,32 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
+          - commit
+          - -m
           - commit
   - name: base3
     contents:
       - !git
         repoSetupName: repo
-        command: branch
         arguments:
-          - "conflict-AA": null
+          - branch
+          - "conflict-AA"
       - !git
         repoSetupName: repo
-        command: branch
         arguments:
-          - "conflict-MR": null
+          - branch
+          - "conflict-MR"
       - !git
         repoSetupName: repo
-        command: branch
         arguments:
-          - "conflict-MM": null
+          - branch
+          - "conflict-MM"
       - !git
         repoSetupName: repo
-        command: branch
         arguments:
-          - "conflict-mixed": null
+          - branch
+          - "conflict-mixed"
   - name: base4
     contents:
       - !writeFile
@@ -106,8 +113,9 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
+          - commit
+          - -m
           - commit
       - !removeFile
         targetPaths:
@@ -116,9 +124,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "remove second file"
+          - commit
+          - -m
+          - remove second file
       - !writeFile
         sourceAssetIds:
           - file/base/fifth_file:v1
@@ -128,9 +137,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "add fifth"
+          - commit
+          - -m
+          - add fifth
   - name: growSecond
     contents:
       - !cleanCheckout
@@ -145,9 +155,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "add sixth"
+          - commit
+          - -m
+          - add sixth
       - !writeFile
         sourceAssetIds:
           - file/base/seventh_file:v1
@@ -157,9 +168,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "add seventh"          
+          - commit
+          - -m
+          - add seventh
   - name: growSecond2
     contents:
       - !removeFile
@@ -169,9 +181,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "remove sixth"
+          - commit
+          - -m
+          - remove sixth
   - name: growSecond3
     contents:
       - !moveFile
@@ -181,9 +194,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "rename"
+          - commit
+          - -m
+          - remove
   - name: conflict-AA
     contents:
       - !cleanCheckout
@@ -198,9 +212,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "add fifth"
+          - commit
+          - -m
+          - add fifth
   - name: conflict-MM
     contents:
       - !cleanCheckout
@@ -215,9 +230,10 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
-          - "modify first"
+          - commit
+          - -m
+          - modify first
   - name: conflict-MR
     contents:
       - !cleanCheckout
@@ -232,8 +248,9 @@ stages:
         repoSetupName: repo
       - !git
         repoSetupName: repo
-        command: commit
         arguments:
+          - commit
+          - -m
           - "remove second"
   - name: conflict-mixed
     contents:
@@ -258,8 +275,8 @@ stages:
     contents:
       - !git
         repoSetupName: repo
-        command: addTag
         arguments:
+          - tag
           - end-of-base
 
 
