--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -7,3 +7,5 @@ asset_index:
     verifyInputPlaceholder: "請輸入答案"
     verifyInputSubmitText: "確認"
     loadReference: "載入 git 倉庫中..."
+    checkpointSaving: "保存檢查點中..."
+    checkpointLoading: "還原檢查點中..."
