Correct tiny errors

--- a/example/resources/levels/test.yaml
+++ b/example/resources/levels/test.yaml
@@ -8,7 +8,10 @@
   steps:
     - !loadReference
       repoSetupName: local
-      referenceName: conflictMixed
+      referenceName: clean
+    - !verifyRepo
+      repoSetupName: local
+      referenceName: clean
     - !checkpoint
       repoSetupName: local
       checkpointName: kerker
