--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -7,10 +7,12 @@ asset_index:
     verifyInputPlaceholder: "請輸入答案"
     verifyInputSubmitText: "確認"
     verifyRepoDescription: "檢查 git 倉庫是否正確..."
-    loadReference: "載入 git 倉庫中..."
+    loadReference: "載入 git 倉庫"
     checkpointSaving: "保存檢查點中..."
     checkpointLoading: "還原檢查點中..."
     checkpointReadyToLoad: "檢查點準備就緒 (ง •̀_•́)ง"
+    startOperationButton: "執行"
+    operationRunning: "操作進行中"
     operationFailed: "操作發生了一些問題，請再試一次"
     checkpointSaveButton: "儲存檢查點"
     checkpointLoadButton: "讀取"
