--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -12,8 +12,10 @@ asset_index:
     checkpointLoading: "還原檢查點中..."
     checkpointReadyToLoad: "檢查點準備就緒 (ง •̀_•́)ง"
     startOperationButton: "執行"
+    operationReady: "準備進行"
     operationRunning: "操作進行中"
     operationFailed: "操作發生了一些問題，請再試一次"
+    operationCompleted: "操作成功"
     checkpointSaveButton: "儲存檢查點"
     checkpointLoadButton: "讀取"
     checkpointReadyToSave: "存檔點"
